tests/negative_tests/syntax_errors/double_semicolon.c
// INVALID - Syntax Error: unexpected semicolon
int main() {
    int x;;  // ERROR: extra semicolon
    return 0;
}
